# CarloRubVid

./: CMakeLists.txt  README.md  carlorubvid.c++
assets/songs/Bohemian Rhapsody/: bohemian_rhapsody.wsg
assets/songs/Don't stop me now/: don't_stop_me_now.wsg
assets/songs/Love Is Real/: love_is_real.wsg
include/CarloRubVid/: button.hpp  editing.hpp  init.hpp  loader.hpp  loop.hpp  optional_loop.hpp  tabbar.hpp
src/: button.c++  editing.c++  init.c++  loader.c++  loop.c++  optional_loop.c++  tabbar.c++
